View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027239 | Open CASCADE | OCCT:Mesh | public | 2016-03-09 15:58 | 2016-12-09 16:37 |
Reporter | ifv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027239: Meshing algorithm creates wrong triangulation | ||||
Description | Meshing algorithm creates triangulation, which does not use all edge nodes for attached shape. This bug appears only for branch CR27108. Algorithm GCPnts_TangentialDeflection creates 21 points for edge, but meshing algorithm assigns the same number for some points: Dump of 1 PolygonOnTriangulations ------- 1 : PolygonOnTriangulation with 21 Nodes 5 5 5 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 3 Deflection : 0.1 Parameters : 4.62713477835072e-015 0.00358413556088819 0.00717644406263706 0.0107792122111369 0.014394864933071 0.0216752542906679 0.0290390165006083 0.0598483207926533 0.275793344556278 0.387875947724317 0.543394808964379 0.68739375455703 0.807392875884239 0.939937359895657 1.0626637339803 1.17311747065648 1.27252583366505 1.36199336037275 1.44251413440969 1.48051110438773 1.51850807436577 It is reason of regression of omf advanced_meshfuse F4 | ||||
Steps To Reproduce | bugs mesh bug 27239 ################ Steps to reproduce restore f1 incmesh f1 0.1 explode f1 e dump f1_4 #Search string "PolygonOnTriangulation with 21 Nodes" and analyse next string #"5 5 5 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 3" #in order to find the same numbers of nodes ("5 5 5 5") | ||||
Tags | No tags attached. | ||||
Test case number | bugs mesh bug27239 | ||||
|
f1 (3,472 bytes) |
|
Branch CR27239 has been created by oan. SHA-1: 5109eb470258a3ad5f5e818e9fd28eac70bfc705 Detailed log of new commits: Author: oan Date: Fri Apr 1 15:52:08 2016 +0300 0027239: Meshing algorithm creates wrong Triangulation Do not insert consequent duplicating nodes in PolygonOnTriangulation. |
|
Dear Mikhail, branch CR27239 has been created on top of CR27226. Please review the changes. |
|
Dependency of 0027226 has been added due to indicate relations in Git repository in order to test the bump of patches #27108 + 0027226 + 0027239. There is no other relation of this issue to 0027226. |
|
Please do not bind a point in myBoundaryPoints if it will be a duplicate. |
|
Branch CR27239 has been updated forcibly by oan. SHA-1: d0bf941212a521351bad8810821c05f4d392c9d4 |
|
Updated. |
|
Reviewed. |
|
Branch CR27239 has been updated forcibly by mkv. SHA-1: 6d6159cce1827376cd8ebcfef6d762623ed2bd74 |
|
Postponed. Need solution for issue #27108 |
|
Branch CR27239 has been updated forcibly by apv. SHA-1: 7aa016fbc70806bdb1fb826255fef6b34783a91e |
|
Branch CR27239 has been rebased on the current master |
|
Branch CR27239 has been updated by apv. SHA-1: 0db2d3d1a3112aca7e7b23eda4e635a5bccd2898 Detailed log of new commits: Author: apv Date: Mon Jun 20 11:47:22 2016 +0300 Small correction of test case bugs/mesh/bug27239 |
|
Dear BugMaster, Branch CR27239 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 7aa016fbc70806bdb1fb826255fef6b34783a91e Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 0 (0 on master) products component: Linux: 68 Windows: 0 MacOS: 1127 Regressions/Differences: Not detected Testing cases: bugs mesh bug27239 - OK http://occt-tests/CR27239-master-OCCT/Debian70-64/bugs/mesh/bug27239.html http://occt-tests/CR27239-master-OCCT/Windows-64-VC10/bugs/mesh/bug27239.html Testing on Linux: Total MEMORY difference: 89330073 / 89163952 [+0.19%] Total CPU difference: 19488.46999999994 / 19458.40999999997 [+0.15%] Testing on Windows: Total MEMORY difference: 55886971 / 55903796 [-0.03%] Total CPU difference: 18750.680595898764 / 18535.758018198954 [+1.16%] |
|
Branch CR27239 has been deleted by inv. SHA-1: 0db2d3d1a3112aca7e7b23eda4e635a5bccd2898 |
occt: master dfb3bdd4 2016-04-27 11:10:15 Committer: bugmaster Details Diff |
0027239: Meshing algorithm creates wrong Triangulation Do not insert consequent duplicating nodes in PolygonOnTriangulation. Small correction of test case bugs/mesh/bug27239 |
Affected Issues 0027239 |
|
mod - src/BRepMesh/BRepMesh_FastDiscret.cxx | Diff File | ||
add - tests/bugs/mesh/bug27239 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-03-09 15:58 | ifv | New Issue | |
2016-03-09 15:58 | ifv | Assigned To | => msv |
2016-03-09 15:58 | ifv | File Added: f1 | |
2016-03-09 17:34 | msv | Assigned To | msv => oan |
2016-04-01 15:52 | git | Note Added: 0052298 | |
2016-04-01 15:52 | oan | Status | new => assigned |
2016-04-01 15:54 | oan | Note Added: 0052299 | |
2016-04-01 15:54 | oan | Assigned To | oan => msv |
2016-04-01 15:54 | oan | Status | assigned => resolved |
2016-04-01 15:54 | oan | Steps to Reproduce Updated | |
2016-04-01 15:55 | oan | Relationship added | child of 0027226 |
2016-04-01 15:58 | oan | Note Added: 0052300 | |
2016-04-26 16:28 | msv | Note Added: 0053607 | |
2016-04-26 16:28 | msv | Assigned To | msv => oan |
2016-04-26 16:28 | msv | Status | resolved => assigned |
2016-04-27 15:43 | git | Note Added: 0053634 | |
2016-04-27 15:46 | oan | Note Added: 0053635 | |
2016-04-27 15:46 | oan | Assigned To | oan => msv |
2016-04-27 15:46 | oan | Status | assigned => resolved |
2016-04-27 16:02 | msv | Note Added: 0053636 | |
2016-04-27 16:02 | msv | Assigned To | msv => bugmaster |
2016-04-27 16:02 | msv | Status | resolved => reviewed |
2016-04-27 16:24 |
|
Assigned To | bugmaster => mkv |
2016-04-27 16:57 | git | Note Added: 0053648 | |
2016-04-27 20:32 |
|
Assigned To | mkv => apv |
2016-04-28 12:40 |
|
Note Added: 0053666 | |
2016-04-28 12:53 |
|
Test case number | => bugs mesh bug27239 |
2016-06-17 13:09 | git | Note Added: 0055162 | |
2016-06-17 13:10 |
|
Note Added: 0055163 | |
2016-06-20 11:47 | git | Note Added: 0055212 | |
2016-06-20 11:58 |
|
Note Added: 0055214 | |
2016-06-20 11:58 |
|
Assigned To | apv => bugmaster |
2016-06-20 11:58 |
|
Status | reviewed => tested |
2016-06-24 12:41 | bugmaster | Changeset attached | => occt master dfb3bdd4 |
2016-06-24 12:41 | bugmaster | Status | tested => verified |
2016-06-24 12:41 | bugmaster | Resolution | open => fixed |
2016-06-24 12:57 | git | Note Added: 0055424 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:37 |
|
Fixed in Version | => 7.1.0 |