0027239: Meshing algorithm creates wrong Triangulation

Do not insert consequent duplicating nodes in PolygonOnTriangulation.

Small correction of test case bugs/mesh/bug27239